--- a/JoVision-Javascript-tasks/Task2/index.html
+++ b/JoVision-Javascript-tasks/Task2/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Click Me Button</title>
 
+  <style>
+    #message {
+      font-size: 24px;         
+      color: red;         
+      font-weight: bold;      
+      text-align: center;     
+      margin-top: 20px;       
+    }
+  </style>
+</head>
+<body>
+  <button id="clickBtn">Click</button>
+  <p id="message"></p>
+  <script>
+    function handleClick() {
+     
+      document.getElementById("message").textContent = "Hello World";
+    }
+
+    document.getElementById("clickBtn").addEventListener("click", handleClick);
+  </script>
+
+</body>
+</html>
